[build-system]
requires = [
    "hatchling>=0.13.0",
]
build-backend = "hatchling.build"

[project]
name = "khulnasoft-fluxcd"
description = "The fluxcd check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [
    "khulnasoft",
    "khulnasoft agent",
    "khulnasoft check",
    "fluxcd",
]
authors = [
    { name = "Khulnasoft", email = "packages@khulnasoft.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "khulnasoft-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/KhulnaSoft/integrations-core"

[tool.hatch.version]
path = "khulnasoft_checks/fluxcd/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/khulnasoft_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/khulnasoft_checks/fluxcd",
]
dev-mode-dirs = [
    ".",
]
