[build-system]
requires = [
    "hatchling>=0.11.2",
    "setuptools>=66; python_version > '3.0'",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "khulnasoft-checks-downloader"
description = "The Khulnasoft Checks Downloader"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "khulnasoft",
    "khulnasoft agent",
    "khulnasoft check",
]
authors = [
    { name = "Khulnasoft", email = "packages@khulnasoft.com" },
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
dynamic = [
    "version",
]

license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "in-toto==2.0.0; python_version > '3.0'",
    "packaging==23.2; python_version > '3.0'",
    "securesystemslib[crypto,pynacl]==0.28.0; python_version > '3.0'",
    "tuf==2.0.0; python_version > '3.0'",
]

[project.urls]
Source = "https://github.com/KhulnaSoft/integrations-core"

[tool.hatch.version]
path = "khulnasoft_checks/downloader/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/khulnasoft_checks",
    "/tests",
]

[tool.hatch.build.targets.wheel]
include = [
    "/khulnasoft_checks/downloader",
]
dev-mode-dirs = [
    ".",
]

[tool.pytest.ini_options]
addopts = "--capture=no --log-cli-level=debug"
