[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "khulnasoft-openstack-controller"
description = "The Openstack_controller check"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "khulnasoft",
    "khulnasoft agent",
    "khulnasoft check",
    "openstack_controller",
]
authors = [
    { name = "Khulnasoft", email = "packages@khulnasoft.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "khulnasoft-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "openstacksdk==2.0.0; python_version > '3.0'",
]

[project.urls]
Source = "https://github.com/KhulnaSoft/integrations-core"

[tool.hatch.version]
path = "khulnasoft_checks/openstack_controller/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/khulnasoft_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/khulnasoft_checks/openstack_controller",
]
dev-mode-dirs = [
    ".",
]
