[build-system]
requires = [
    "hatchling>=0.11.2",
    "setuptools>=66; python_version > '3.0'",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "khulnasoft-snmp"
description = "The SNMP check"
readme = "README.md"
keywords = [
    "khulnasoft",
    "khulnasoft agent",
    "khulnasoft check",
    "snmp",
]
authors = [
    { name = "Khulnasoft", email = "packages@khulnasoft.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "khulnasoft-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "futures==3.4.0; python_version < '3.0'",
    "ipaddress==1.0.23; python_version < '3.0'",
    "ply==3.11",
    "pyasn1==0.4.6",
    "pycryptodomex==3.19.1",
    "pysmi==0.3.4",
    "pysnmp-mibs==0.1.6",
    "pysnmp==4.4.9",
]

[project.urls]
Source = "https://github.com/KhulnaSoft/integrations-core"

[tool.hatch.version]
path = "khulnasoft_checks/snmp/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/khulnasoft_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/khulnasoft_checks/snmp",
]
dev-mode-dirs = [
    ".",
]
