[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "khulnasoft-sqlserver"
description = "The SQL Server check"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "khulnasoft",
    "khulnasoft agent",
    "khulnasoft check",
    "sqlserver",
]
authors = [
    { name = "Khulnasoft", email = "packages@khulnasoft.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "khulnasoft-checks-base>=34.1.0",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "azure-identity==1.15.0; python_version > '3.0'",
    "lxml==4.9.2",
    "pyodbc==5.0.1; (sys_platform != 'darwin' or platform_machine != 'arm64') and python_version > '3.0'",
    "pywin32==306; sys_platform == 'win32' and python_version > '3.0'",
]

[project.urls]
Source = "https://github.com/KhulnaSoft/integrations-core"

[tool.hatch.version]
path = "khulnasoft_checks/sqlserver/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/khulnasoft_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/khulnasoft_checks/sqlserver",
]
dev-mode-dirs = [
    ".",
]
