[build-system]
requires = [
    "hatchling>=0.11.2",
    "setuptools>=66; python_version > '3.0'",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "datadog-tls"
description = "The TLS check"
readme = "README.md"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "tls",
]
authors = [
    { name = "Datadog", email = "packages@khulnasoft.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=32.6.0",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "cryptography==3.3.2; python_version < '3.0'",
    "cryptography==41.0.7; python_version > '3.0'",
    "ipaddress==1.0.23; python_version < '3.0'",
    "service-identity[idna]==21.1.0; python_version < '3.0'",
    "service-identity[idna]==23.1.0; python_version > '3.0'",
]

[project.urls]
Source = "https://github.com/KhulnaSoft/integrations-core"

[tool.hatch.version]
path = "khulnasoft_checks/tls/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/khulnasoft_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/khulnasoft_checks/tls",
]
dev-mode-dirs = [
    ".",
]
