[build-system]
requires = [
    "hatchling>=0.13.0",
]
build-backend = "hatchling.build"

[project]
name = "khulnasoft-{project_name}"
description = "The {integration_name} check"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
keywords = [
    "khulnasoft",
    "khulnasoft agent",
    "khulnasoft check",
    "{check_name}",
]
authors = [
    {{ name = "{author}", email = "{email_packages}" }},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "khulnasoft-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/KhulnaSoft/{repo_name}"

[tool.hatch.version]
path = "khulnasoft_checks/{check_name}/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/khulnasoft_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/khulnasoft_checks/{check_name}",
]
dev-mode-dirs = [
    ".",
]
